Replace RMSE with MSE

--- a/5/MSE_RMSE.ipynb
+++ b/5/MSE_RMSE.ipynb
@@ -90,7 +90,7 @@
     "x = sp.Symbol('x')\n",
     "f = lambda x: 3*x + 5\n",
     "pred = [f(2), f(4), f(8)]\n",
-    "mse(actual, pred, squared=True)"
+    "mse(actual, pred)"
    ]
   },
   {
@@ -162,7 +162,7 @@
     "x = sp.Symbol('x')\n",
     "f = lambda x: 0.25*x**2 + 0.75*x + 1.25\n",
     "pred = [f(2), f(4), f(8)]\n",
-    "mse(actual, pred, squared=True)"
+    "mse(actual, pred)"
    ]
   },
   {
@@ -234,7 +234,7 @@
     "x = sp.Symbol('x')\n",
     "f = lambda x: 0.5*x**3 - 0.25*x**2 + 0.75*x + 1.25\n",
     "pred = [f(2), f(4), f(8), f(10), f(12)]\n",
-    "mse(actual, pred, squared=True)"
+    "mse(actual, pred)"
    ]
   },
   {
