--- a/5/Преобразования_функций_Растяжения_и_сжатия_Практика.ipynb
+++ b/5/Преобразования_функций_Растяжения_и_сжатия_Практика.ipynb
@@ -10,7 +10,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 126,
+      "execution_count": 1,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 127,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -47,7 +47,7 @@
         "    plt.plot(x_range, f(x_range))\n",
         "    plt.scatter(x, y, color='red')\n",
         "    plt.show()\n",
-        "    print(f'RMSE = {mse(y, actual, squared=True)}')"
+        "    print(f'MSE = {mse(y, actual)}')"
       ]
     },
     {
@@ -58,12 +58,12 @@
         "id": "AbJTZ4aJ5S5B"
       },
       "source": [
-        "### 1. Получите значение RMSE меньшее 50."
+        "### 1. Получите значение MSE меньшее 50."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 128,
+      "execution_count": 3,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -81,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 129,
+      "execution_count": 4,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -104,7 +104,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "RMSE = 17.27361111111123\n"
+            "MSE = 17.27361111111123\n"
           ]
         }
       ],
@@ -120,12 +120,12 @@
         "id": "oEr-5Qyl5S5Q"
       },
       "source": [
-        "### 2. Получите значение RMSE меньшее 150."
+        "### 2. Получите значение MSE меньшее 150."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 130,
+      "execution_count": 5,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -143,7 +143,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 131,
+      "execution_count": 6,
       "metadata": {
         "colab": {},
         "colab_type": "code",
@@ -165,7 +165,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "RMSE = 129.95868943603034\n"
+            "MSE = 129.95868943603034\n"
           ]
         }
       ],
