--- a/5/Преобразования_функций_Сдвиги_вправо_и_влево_Практика.ipynb
+++ b/5/Преобразования_функций_Сдвиги_вправо_и_влево_Практика.ipynb
@@ -47,7 +47,7 @@
         "    plt.plot(x_range, f(x_range))\n",
         "    plt.scatter(x, y, color='red')\n",
         "    plt.show()\n",
-        "    print(f'RMSE = {mse(y, actual, squared=True)}')"
+        "    print(f'MSE = {mse(y, actual, squared=True)}')"
       ]
     },
     {
@@ -58,7 +58,7 @@
         "id": "Psfud4Mvs9Kb"
       },
       "source": [
-        "### 1. Получите значение RMSE меньшее 110."
+        "### 1. Получите значение MSE меньшее 110."
       ]
     },
     {
@@ -109,7 +109,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "RMSE = 103.16666666666667\n"
+            "MSE = 103.16666666666667\n"
           ]
         }
       ],
@@ -125,7 +125,7 @@
         "id": "ODx0RXWIs9Ku"
       },
       "source": [
-        "### 2. Получите значение RMSE меньшее 150."
+        "### 2. Получите значение MSE меньшее 150."
       ]
     },
     {
@@ -175,7 +175,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "RMSE = 141.0\n"
+            "MSE = 141.0\n"
           ]
         }
       ],
